Better code style, tweaks and bug fixes